<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mainscreenlayout.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mainscreenlayout.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.mainscreenlayout.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.mainscreenlayout.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/chat_fragment" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.mainscreenlayout.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/favorites_fragment" />
</navigation>